add some text to hmtl elements to check click events

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header><h1>Game name</h1></header>
     <main>
       <section class="player" id="player_1">
+        <h2 class="player__title">Player 1</h2>
         <div class="cards">
           <!-- This contains the players current cards in hand -->
         </div>
@@ -20,6 +21,7 @@
         </div>
       </section>
       <section class="player" id="player_2">
+        <h2 class="player__title">Player 1</h2>
         <div class="cards">
           <!-- This contains the players current cards in hand -->
         </div>
@@ -30,9 +32,11 @@
       <section id="board">
         <div id="main_pile">
           <!-- This contains all of the cards left after players cards are dealt or discarded -->
+          <h2 class="board__pile">Main Pile</h2>
         </div>
         <div id="discard_pile">
           <!-- This contains cards discarded either from the players hands or from the main pile -->
+          <h2 class="board__pile">Discard Pile</h2>
         </div>
       </section>
       <section id="score_area">
