create styles.scss file and add border to card pile divs

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </div>
       </section>
       <section id="board">
-        <div id="main_pile">
+        <div class="board__pile" id="main_pile">
           <!-- This contains all of the cards left after players cards are dealt or discarded -->
-          <h2 class="board__pile">Main Pile</h2>
+          <h2>Main Pile</h2>
         </div>
-        <div id="discard_pile">
+        <div class="board__pile" id="discard_pile">
           <!-- This contains cards discarded either from the players hands or from the main pile -->
-          <h2 class="board__pile">Discard Pile</h2>
+          <h2>Discard Pile</h2>
         </div>
       </section>
       <section id="score_area">
