add id's to player->cards and add element attribute to the person class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <section class="player" id="player_1">
         <h2 class="player__title">Player 1</h2>
-        <div class="cards">
+        <div class="cards" id="player_1_cards">
           <!-- This contains the players current cards in hand -->
         </div>
         <div id="player_1_played">
@@ -22,7 +22,7 @@
       </section>
       <section class="player" id="player_2">
         <h2 class="player__title">Player 1</h2>
-        <div class="cards">
+        <div class="cards" id="player_2_cards">
           <!-- This contains the players current cards in hand -->
         </div>
         <div id="player_2_played">
