create basic grid layout for playing area

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="./app.js" async defer></script>
   </head>
   <body>
-    <header><h1>Game name</h1></header>
-    <main>
+    <header class="header"><h1>Game name</h1></header>
+    <main class="main">
       <section class="player" id="player_1">
         <h2 class="player__title">Player 1</h2>
         <div class="cards" id="player_1_cards">
@@ -40,6 +40,7 @@
         </div>
       </section>
       <section id="score_area">
+        <h2>Scores</h2>
         <div class="round">
           <!-- This contains information about the round - which round, and the players running total score -->
         </div>
