--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="board__pile" id="discard_pile">
           <!-- This contains cards discarded either from the players hands or from the main pile -->
           <h2>Discard Pile</h2>
+          <div>🂠</div>
         </div>
       </section>
       <section id="score_area">
