add some more basic styles for main board with come temporary borders to delineate areas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <!-- This contains combinations of cards LAID by the player -->
         </div>
       </section>
-      <section id="board">
+      <section class="board" id="board">
         <div class="board__pile" id="main_pile">
           <!-- This contains all of the cards left after players cards are dealt or discarded -->
           <h2>Main Pile</h2>
@@ -37,7 +37,6 @@
         <div class="board__pile" id="discard_pile">
           <!-- This contains cards discarded either from the players hands or from the main pile -->
           <h2>Discard Pile</h2>
-          <div>🂠</div>
         </div>
       </section>
       <section id="score_area">
