--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>'Tens' - a card game for two playes</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="./app.js" async defer></script>
+    <script src="./app.js" type="module" async defer></script>
   </head>
   <body>
     <header class="header"><h1>Game name</h1></header>
