add some buttons to html to later use for player actions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <div class="player__cards" id="player_1_cards">
           <!-- This contains the players current cards in hand -->
         </div>
+        <div class="player1_actions">
+          <button id="player_1_discard">discard</button>
+          <button id="player_1_play">select cards</button>
+          <p id="player_1_message"></p>
+        </div>
         <div id="player_1_played">
           <!-- This contains combinations of cards LAID by the player -->
         </div>
@@ -24,6 +29,11 @@
         <h2 class="player__title">Player 2</h2>
         <div class="player__cards" id="player_2_cards">
           <!-- This contains the players current cards in hand -->
+        </div>
+        <div class="player2_actions">
+          <button id="player_2_discard">discard</button>
+          <button id="player_2_play">select cards</button>
+          <p id="player_2_message"></p>
         </div>
         <div id="player_2_played">
           <!-- This contains combinations of cards LAID by the player -->
