refactor game turn checker so that player can go through stages of play

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <!-- This contains the players current cards in hand -->
         </div>
         <div class="player1_actions">
-          <button id="player_1_discard">discard</button>
-          <button id="player_1_play">select cards</button>
           <p id="player_1_message"></p>
+          <button id="player_1_discard">discard?</button>
+          <button id="player_1_play">lay down?</button>
         </div>
         <div id="player_1_played">
           <!-- This contains combinations of cards LAID by the player -->
@@ -31,9 +31,9 @@
           <!-- This contains the players current cards in hand -->
         </div>
         <div class="player2_actions">
+          <p id="player_2_message"></p>
           <button id="player_2_discard">discard</button>
           <button id="player_2_play">select cards</button>
-          <p id="player_2_message"></p>
         </div>
         <div id="player_2_played">
           <!-- This contains combinations of cards LAID by the player -->
