add a html button to allow a player to choose play options

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         </div>
         <div class="player1_actions">
           <p id="player_1_message"></p>
-          <button id="player_1_discard">discard?</button>
-          <button id="player_1_play">lay down?</button>
+          <button id="player_1_action"></button>
         </div>
         <div id="player_1_played">
           <!-- This contains combinations of cards LAID by the player -->
@@ -32,8 +31,7 @@
         </div>
         <div class="player2_actions">
           <p id="player_2_message"></p>
-          <button id="player_2_discard">discard</button>
-          <button id="player_2_play">select cards</button>
+          <button id="player_2_action"></button>
         </div>
         <div id="player_2_played">
           <!-- This contains combinations of cards LAID by the player -->
