--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         <div class="player__cards" id="player_1_cards">
           <!-- This contains the players current cards in hand -->
         </div>
-        <div class="player1_actions">
-          <p id="player_1_message"></p>
-          <button id="player_1_action"></button>
-        </div>
+        <div class="player1_actions"></div>
         <div id="player_1_played">
           <!-- This contains combinations of cards LAID by the player -->
         </div>
@@ -29,10 +26,7 @@
         <div class="player__cards" id="player_2_cards">
           <!-- This contains the players current cards in hand -->
         </div>
-        <div class="player2_actions">
-          <p id="player_2_message"></p>
-          <button id="player_2_action"></button>
-        </div>
+        <div class="player2_actions"></div>
         <div id="player_2_played">
           <!-- This contains combinations of cards LAID by the player -->
         </div>
