--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
         </div>
       </section>
       <section class="board" id="board">
-        <div class="board__pile" id="main_pile">
-          <!-- This contains all of the cards left after players cards are dealt or discarded -->
-          <h2>Main Pile</h2>
-        </div>
-        <div class="board__pile" id="discard_pile">
+        <div class="board__pile" id="main_pile"></div>
+        <div class="board__pile" id="played_pile">
           <!-- This contains cards discarded either from the players hands or from the main pile -->
-          <h2>Discard Pile</h2>
+          <h2 id="played_suit">Played suit:</h2>
         </div>
       </section>
       <section id="score_area">
