--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>'Tens' - a card game for two playes</title>
+    <title>Two Player Whist</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="./app.js" type="module" async defer></script>
   </head>
