add resart button in html and basic styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <script src="./app.js" type="module" async defer></script>
   </head>
   <body>
-    <header class="header"><h1>Two Player Whist</h1></header>
+    <header class="header">
+      <h1>Two Player Whist</h1>
+      <button id="restart">Click to restart</button>
+    </header>
     <main class="main">
       <h2 id="game_display">Played suit:</h2>
       <section class="player" id="player_1">
